--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,166 +1,58 @@
-name: RDP + Tailscale + StarDesk (runneradmin)
+name: VNC + Tailscale + StarDesk (macOS)
 
 on:
   workflow_dispatch:
-    inputs:
-      STAR_DESK_URL:
-        description: "Optional: direct URL to StarDesk_1.0.1.exe (paste if known)"
-        required: false
-        default: ""
 
 jobs:
   setup-remote:
-    runs-on: windows-latest
-    timeout-minutes: 360   # tahan sampai 6 jam; ubah sesuai kebutuhan
+    runs-on: macos-latest   # bisa ubah ke macos-14, macos-13, dst.
+    timeout-minutes: 360
 
     steps:
-      - name: Enable RDP & firewall
-        shell: pwsh
+      - name: Enable Screen Sharing (VNC)
+        shell: bash
         run: |
-          # Aktifkan RDP
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
-          # (opsional) nonaktifkan NLA untuk testing cepat
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
+          echo "Mengaktifkan VNC access..."
+          sudo systemsetup -setremotelogin on
+          sudo defaults write /Library/Preferences/com.apple.RemoteManagement.plist VNCAlwaysStartOnConsole -bool true
+          sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
+            -activate -configure -access -on \
+            -clientopts -setvnclegacy -vnclegacy yes \
+            -clientopts -setvncpw -vncpw Asukoe123456 \
+            -restart -agent -privs -all
 
-          # Firewall allow 3389
-          netsh advfirewall firewall delete rule name="RDP-Tailscale" | Out-Null
-          netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
+          echo "VNC password diset ke: Asukoe123456"
 
-          # Restart RDP service
-          Restart-Service -Name TermService -Force
-
-      - name: Use runneradmin for RDP (change password & ensure RDP group)
-        shell: pwsh
+      - name: Install Tailscale
+        shell: bash
         run: |
-          $user = "runneradmin"
-          $pass = "Asukoe123456"   # <- testing; ganti kapan saja
-          Set-LocalUser -Name $user -Password (ConvertTo-SecureString $pass -AsPlainText -Force)
-          try { Add-LocalGroupMember -Group "Remote Desktop Users" -Member $user -ErrorAction Stop } catch {}
-          echo "RDP_USER=$user" >> $env:GITHUB_ENV
-          echo "RDP_PASS=$pass" >> $env:GITHUB_ENV
+          curl -fsSL https://tailscale.com/install.sh | sh
+          sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=macos-runner-${GITHUB_RUN_ID}
+          sleep 10
+          tailscale ip -4 | tee tailscale_ip.txt
+          echo "TAILSCALE_IP=$(cat tailscale_ip.txt)" >> $GITHUB_ENV
 
-      - name: Install Tailscale (robust)
-        shell: pwsh
+      - name: Install StarDesk
+        shell: bash
         run: |
-          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
-          $installerPath = "$env:TEMP\tailscale.msi"
-          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
-          $p = Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/qn", "/norestart" -Wait -PassThru
-          if ($p.ExitCode -ne 0) { Write-Error "Tailscale MSI install failed ($($p.ExitCode))"; exit 1 }
-
-          # Temukan tailscale.exe
-          $candidates = @(
-            "$env:ProgramFiles\Tailscale LLC\Tailscale\tailscale.exe",
-            "$env:ProgramFiles\Tailscale\tailscale.exe",
-            "$env:ProgramFiles(x86)\Tailscale LLC\Tailscale\tailscale.exe",
-            "$env:ProgramFiles(x86)\Tailscale\tailscale.exe"
-          )
-          $tsExe = $null
-          for ($i=0; $i -lt 20 -and -not $tsExe; $i++) {
-            $tsExe = ($candidates | Where-Object { Test-Path $_ } | Select-Object -First 1)
-            if (-not $tsExe) {
-              try {
-                $f = Get-ChildItem -Path "$env:ProgramFiles*", "C:\ProgramData" -Recurse -Filter "tailscale.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
-                if ($f) { $tsExe = $f.FullName }
-              } catch {}
-            }
-            if (-not $tsExe) { Start-Sleep -Seconds 2 }
-          }
-          if (-not $tsExe) { Write-Error "tailscale.exe not found"; exit 1 }
-          echo "TS_EXE=$tsExe" >> $env:GITHUB_ENV
-          Write-Host "tailscale.exe at: $tsExe"
-
-      - name: Connect Tailscale
-        shell: pwsh
-        run: |
-          $tsExe = $env:TS_EXE
-          & $tsExe up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="gh-runner-$env:GITHUB_RUN_ID"
-          if ($LASTEXITCODE -ne 0) { Write-Error "tailscale up failed ($LASTEXITCODE)"; exit $LASTEXITCODE }
-
-          # Ambil IPv4 dengan retry
-          $tsIP = $null; $retries = 0
-          while (-not $tsIP -and $retries -lt 12) {
-            $tsIP = & $tsExe ip -4
-            if (-not $tsIP) { Start-Sleep -Seconds 5; $retries++ }
-          }
-          if (-not $tsIP) { Write-Error "No Tailscale IPv4"; exit 1 }
-          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-          Write-Host "Tailscale IP: $tsIP"
-
-      - name: Verify RDP port via Tailscale
-        shell: pwsh
-        run: |
-          $r = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $r.TcpTestSucceeded) { Write-Error "RDP 3389 not reachable"; exit 1 }
-          Write-Host "RDP 3389 reachable."
-
-      - name: Install StarDesk 1.0.1
-        shell: pwsh
-        run: |
-          $tmp = "$env:TEMP\stardesk"; New-Item -ItemType Directory -Path $tmp -Force | Out-Null
-          $out = Join-Path $tmp "StarDesk_1.0.1.exe"
-
-          # 1) Pakai input kalau disediakan
-          $urlInput = "${{ github.event.inputs.STAR_DESK_URL }}"
-          $urls = @()
-          if ($urlInput -and $urlInput.Trim().Length -gt 0) { $urls += $urlInput.Trim() }
-
-          # 2) Kandidat URL umum ke file StarDesk_1.0.1.exe
-          $filename = "StarDesk_1.0.1.exe"
-          $urls += @(
-            "https://www.stardesk.net/$filename",
-            "https://www.stardesk.net/res/download/$filename",
-            "https://stardesk.net/$filename",
-            "https://download.stardesk.net/$filename",
-            "https://cdn.stardesk.net/$filename"
-          )
-
-          $success = $false
-          foreach ($u in $urls) {
-            try {
-              Write-Host "Trying $u"
-              Invoke-WebRequest -Uri $u -OutFile $out -UseBasicParsing -TimeoutSec 180 -MaximumRedirection 5
-              if ((Test-Path $out) -and ((Get-Item $out).Length -gt 2MB)) { $success = $true; break }
-            } catch {
-              Write-Host "Failed: $u"
-            }
-          }
-          if (-not $success) {
-            Write-Error "Gagal download StarDesk_1.0.1.exe. Jalankan lagi dan isi input STAR_DESK_URL (link langsung dari tombol 'StarDesk for Windows')."
-            exit 1
-          }
-
-          # Coba silent switches umum; jika gagal, jalankan normal
-          $args = @("/S", "/silent", "/verysilent")
-          $installed = $false
-          foreach ($a in $args) {
-            try {
-              $p = Start-Process -FilePath $out -ArgumentList $a -Wait -PassThru -WindowStyle Hidden
-              if ($p.ExitCode -eq 0) { $installed = $true; break }
-            } catch {}
-          }
-          if (-not $installed) {
-            Write-Host "Silent unknown; running without switches..."
-            Start-Process -FilePath $out -Wait
-          }
-          Write-Host "StarDesk installer executed."
+          mkdir -p ~/Downloads/stardesk
+          cd ~/Downloads/stardesk
+          curl -L -o StarDesk_1.0.1.dmg "https://dl.stardesk.net/StarDesk_Setup_V1.0.1.5404_0926024227_stardesk_nochannel.exe?n=StarDesk_1.0.1.exe"
+          echo "StarDesk DMG downloaded."
+          # kalau nanti StarDesk ada versi DMG/macOS resmi, ganti URL di atas
 
       - name: Show connection info & keep alive
-        shell: pwsh
-        timeout-minutes: 360
+        shell: bash
         run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address : $env:TAILSCALE_IP"
-          Write-Host "Username: $env:RDP_USER"
-          Write-Host "Password: $env:RDP_PASS"
-          Write-Host "==================`n"
-
-          # Pastikan port 3389 listen
-          try { Get-NetTCPConnection -LocalPort 3389 -State Listen | Out-Host } catch {}
-
-          # Keep runner hidup
-          while ($true) {
-            Write-Host "[$(Get-Date)] RDP Active - Cancel workflow to terminate"
-            Start-Sleep -Seconds 300
-          }
+          echo ""
+          echo "=== VNC ACCESS ==="
+          echo "Address : $TAILSCALE_IP"
+          echo "Password: Asukoe123456"
+          echo "=================="
+          echo ""
+          echo "Connect via VNC app (RealVNC, Remmina, atau Android VNC Viewer)"
+          echo "contoh address: vnc://$TAILSCALE_IP"
+          while true; do
+            echo "[$(date)] VNC aktif - tekan Cancel workflow untuk stop"
+            sleep 300
+          done
